--- a/MTApiService/packages.config
+++ b/MTApiService/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ILMerge" version="3.0.41" targetFramework="net48" />
+  <package id="ILRepack.Lib.MSBuild.Task" version="2.0.18.2" targetFramework="net48" />
   <package id="log4net" version="2.0.15" targetFramework="net48" />
-  <package id="MSBuild.ILMerge.Task" version="1.1.3" targetFramework="net48" />
 </packages>
