--- a/.github/workflows/github-actions-build.yml
+++ b/.github/workflows/github-actions-build.yml
@@ -83,7 +83,12 @@ jobs:
         run: 
           echo "::set-output name=LOG::$(
              git log HEAD --pretty=format:"%h %s" -n 1
-          )"      
+          )"
+      - name: Remove latest Release
+        if: github.ref == 'refs/heads/master'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release delete Latest -y
       - name: Release to Latest
         uses: softprops/action-gh-release@v1
         if: github.ref == 'refs/heads/master'
