Upgrade installer to wix4 (#32)
* upgrade installer to wix 4

* update solution

* use dotnet build for installer

* force x64 build of wrapper

* remove x86 configs

* set PreferredToolArchitecture

* set platform in project

* set bitnes of component

* add platforms

* fixed wrong paths

* set bitness again

* next try

* remove commented lines

* small typo

--- a/MtApiServiceNetCore/MtApiServiceNetCore.csproj
+++ b/MtApiServiceNetCore/MtApiServiceNetCore.csproj
@@ -4,14 +4,24 @@
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+	<Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <OutputPath>..\build\products\Debug\</OutputPath>
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutputPath>..\build\products\Debug\</OutputPath>
     <DebugType>embedded</DebugType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>..\build\products\Release\</OutputPath>
     <DefineConstants></DefineConstants>
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>..\build\products\Release\</OutputPath>
+    <DefineConstants />
     <DebugType>embedded</DebugType>
   </PropertyGroup>
   <PropertyGroup>
