--- a/MTApiService/MTApiService.csproj
+++ b/MTApiService/MTApiService.csproj
@@ -79,9 +79,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICommandManager.cs" />
-    <Compile Include="IMetaTraderHandler.cs" />
     <Compile Include="ITaskExecutor.cs" />
     <Compile Include="LogConfigurator.cs" />
+    <Compile Include="Mt5Connector.cs" />
     <Compile Include="Mt5Expert.cs" />
     <Compile Include="MtCommandEventArgs.cs" />
     <Compile Include="IDisposableChannel.cs" />
