--- a/TestClients/MTApiServerStandalone/MTApiServerStandalone.csproj
+++ b/TestClients/MTApiServerStandalone/MTApiServerStandalone.csproj
@@ -63,7 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MetaTraderHandlerMock.cs" />
+    <Compile Include="Mt5ExpertCustom.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
